# Non-Subsampled_Shearlet_Transform

./: .gdbinit  .gitignore  CMakeLists.txt  Config.h  LICENSE  README.md  main.cpp
Form_NSST/: Form_Empty.sln
Form_NSST/Form_Empty/: AtrousDec.cpp  AtrousDec.h  AtrousFilters.cpp  AtrousFilters.h  AtrousRec.h  Atrousc.cpp  Atrousc.h  Atrousrec.cpp  Cell.cpp  Cell.h  Container.h  Dst.h  FFT.cpp  FFT.h  Form_Empty.vcxproj  Form_Empty.vcxproj.filters  Image.cpp  Image.h  MatlabFuncs.cpp  MatlabFuncs.h  MyForm.cpp  MyForm.h  MyForm.resx  NSSTFuncs.cpp  NSSTFuncs.h  NsstDec.cpp  NsstDec.h  NsstRec.cpp  NsstRec.h  Process.cpp  Process.h  ShearParameters.h  ShearingFiltersMyer.cpp  ShearingFiltersMyer.h  nsst_dec1e.cpp  nsst_dec1e.h  symext.cpp  symext.h
Form_NSST/Form_Empty/Debug/: .NETFramework,Version=v4.5.AssemblyAttributes.cpp  Form_Empty.vcxproj.FileListAbsolute.txt  Form_Empty.vcxproj.GenerateResource.cache  Form_Empty.vcxprojAssemblyReference.cache  NSST_Form.exe.recipe
Form_NSST/Form_Empty/Debug/NSST_Form.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NSST_Form.lastbuildstate  NSST_Form.write.1u.tlog  SYSTEM.DATA.DLL.metagen  SYSTEM.DLL.metagen  SYSTEM.DRAWING.DLL.metagen  SYSTEM.WINDOWS.FORMS.DLL.metagen  SYSTEM.XML.DLL.metagen  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  metagen.read.1.tlog  metagen.write.1.tlog
Form_NSST/Form_Empty/image/: barbara.txt
Form_NSST/Release/: NSST_Form.exe.metagen
Form_NSST/images/debug_docs/: im_01.txt
NSST_Form/: NSSTForm.sln
NSST_Form/NSSTForm/: Container.h  FFT.cpp  FFT.h  Image.cpp  Image.h  MatlabFuncs.cpp  MatlabFuncs.h  NSSTForm.cpp  NSSTForm.h  NSSTForm.vcxproj  NSSTForm.vcxproj.filters  NSSTFuncs.cpp  NSSTFuncs.h  NsstDec.cpp  NsstDec.h  NsstRec.cpp  NsstRec.h  Process.cpp  Process.h
NSST_Form/Release/: NSST_Form.exe.metagen
external_lib/fftw-3.3.5/: fftw3f.pc  libfftw3f.la
external_lib/fftw-3.3.5-dll64/: libfftw3f-3.exp  libfftw3f-3.lib
include/: Circ_Shift.h  Container.h  Definitions.h  Image.h  NSST.h  fftwf_.h  fftwf_wrapper.h
src/: Image.cpp  NSST.cpp
